--- a/css/styles.css
+++ b/css/styles.css
@@ -32,11 +32,10 @@ ul {
     width: 100%;
     z-index: 3;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     text-transform: uppercase;
     height: 100px;
-    padding: 0 30px;
+    padding: 0 75px;
 }
 
 /*logo*/
@@ -52,12 +51,18 @@ ul {
 }
 
 /*Desktop Menu*/
-.desktop-main-menu {
-    margin-right: 50px;
+
+.desktop-main-menu{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-left: 50px;
+
 }
 
 .desktop-main-menu ul {
     display: flex;
+    justify-content: space-between;
 }
 
 .desktop-main-menu ul li {
@@ -235,8 +240,8 @@ footer ul li a:hover {
 /* Hamburger Menu*/
 .hamburger {
     position: fixed;
-    top: 40px;
-    right: 20px;
+    top: 45px;
+    right: 45px;
     z-index: 10;
     width: 20px;
     height: 20px;
@@ -272,14 +277,17 @@ footer ul li a:hover {
 
 .open .hamburger-top {
     transform: rotate(45deg) translateY(6px) translateX(6px);
+    left:-16px;
 }
 
 .open .hamburger-middle {
     display: none;
+    left:-16px;
 }
 
 .open .hamburger-bottom {
     transform: rotate(-45deg) translateY(6px) translateX(-6px);
+    left:-16px;
 }
 
 /* Overlay */
@@ -392,7 +400,7 @@ footer ul li a:hover {
     animation-fill-mode: both;
 }
 
-/* Falcon 9 Stats*/
+/* Stats*/
 .stats{
     max-width: 960px;
     margin: 0 auto;
